--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,3 +1,6 @@
+.links-headings {
+  margin-left: 30px;
+}
 ul {
   display: flex;
   list-style: none;
@@ -60,6 +63,10 @@ ul a:hover {
 input[type="image"] {
   width: 30px;
   height: 30px;
+}
+
+input[type="image"]:hover {
+  opacity: 70%;
 }
 
 input[type="text"] {
